--- a/customer_analysis_visualization.ipynb
+++ b/customer_analysis_visualization.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "69baa2b1",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Customer Analysis Results\n",
     "\n",
@@ -31,9 +33,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28be881a",
+   "id": "3436d525",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "##### packages "
@@ -100,7 +103,7 @@
    "cell_type": "markdown",
    "id": "eaeb234a",
    "metadata": {
-    "heading_collapsed": true
+    "hidden": true
    },
    "source": [
     "##  Analysis\n",
@@ -195,7 +198,6 @@
    "cell_type": "markdown",
    "id": "c24a5667",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -375,11 +377,10 @@
    "cell_type": "markdown",
    "id": "030518c4",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "#### distributions "
+    "#### Distributions "
    ]
   },
   {
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2673f49c",
+   "id": "f0deb4a2",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -775,9 +776,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae3f3e3f",
+   "id": "5cf3d577",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -880,8 +880,8 @@
    },
    "source": [
     "#### Observations\n",
-    "- There doesn't seem to be much multicolinearity in the data\n",
-    "- Intuitively I'd expect correlation between total_claim_amount and monthly_premium_auto and this is reflected in the data. To some extent customer_lifetime_value is correlated with monthly_premium_auto and total_claim_amount as well. The months_since_last_claim and monthly_premium_auto I'd expect to be anticorrelated.\n"
+    "- Negligible multicolinearity in the data\n",
+    "- Modest correlation (r=approx .6) between total_claim_amount and monthly_premium_auto. Customer_lifetime_value is moderatedly correlated (r=.4) with monthly_premium_auto and total_claim_amount (r=.25) as well. The months_since_last_claim and monthly_premium_auto are expected to be anticorrelated, but this is not observed.\n"
    ]
   },
   {
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fc6d83d",
+   "id": "8ff9894f",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37a3c09",
+   "id": "43e4e8ed",
    "metadata": {
     "hidden": true
    },
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e15bcd29",
+   "id": "c798aa21",
    "metadata": {
     "hidden": true
    },
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dc629bf",
+   "id": "ba80d189",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -1525,7 +1525,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "ee1274a9",
+   "id": "81b5c040",
    "metadata": {
     "hidden": true
    },
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0655755a",
+   "id": "24f24f9a",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -1648,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e673b10e",
+   "id": "bbf0e995",
    "metadata": {
     "hidden": true
    },
